doc_DATA = \
	liblouis.txt \
	liblouis.html \
	$(MULTI_HTML_DOCS)

MULTI_HTML_DOCS = \
	multipage/Automated-Testing-of-Translation-Tables.html \
	multipage/Back_002dtranslation-with-Liblouis.html \
	multipage/Braille-Indicator-Opcodes.html \
	multipage/Character_002dClass-Opcodes.html \
	multipage/Character_002dDefinition-Opcodes.html \
	multipage/Computer-braille.html \
	multipage/Concept-Index.html \
	multipage/Data-structure-of-liblouis-tables.html \
	multipage/Deprecation-of-the-logging-system.html \
	multipage/Emphasis-Opcodes.html \
	multipage/Emphasis-classes.html \
	multipage/Emphasis-indicators.html \
	multipage/Function-Index.html \
	multipage/General-Notes.html \
	multipage/How-tables-are-found.html \
	multipage/How-to-Write-Translation-Tables.html \
	multipage/Hyphenation-Tables.html \
	multipage/Inline-definition-of-tables.html \
	multipage/Introduction.html \
	multipage/Letter-indicator.html \
	multipage/Miscellaneous-Opcodes.html \
	multipage/Note-about-fallback-behavior.html \
	multipage/Notes-on-Back_002dTranslation.html \
	multipage/Opcode-Index.html \
	multipage/Opcodes-for-Standing-Alone-Sequences.html \
	multipage/Overview-_0028library_0029.html \
	multipage/Overview.html \
	multipage/Permanent-indicator.html \
	multipage/Phrase-indicator.html \
	multipage/Program-Index.html \
	multipage/Programming-with-liblouis.html \
	multipage/Python-bindings.html \
	multipage/Query-Syntax.html \
	multipage/Special-Processing-Opcodes.html \
	multipage/Special-Symbol-Opcodes.html \
	multipage/Swap-Opcodes.html \
	multipage/Table-Metadata.html \
	multipage/Testing-Translation-Tables-interactively.html \
	multipage/The-Context-and-Multipass-Opcodes.html \
	multipage/The-correct-Opcode.html \
	multipage/The-match-Opcode.html \
	multipage/Translation-Opcodes.html \
	multipage/Word-indicator.html \
	multipage/YAML-Tests.html \
	multipage/after-opcode.html \
	multipage/always-opcode.html \
	multipage/attribute-opcode.html \
	multipage/base-opcode.html \
	multipage/before-opcode.html \
	multipage/begcaps-opcode.html \
	multipage/begcapsword-opcode.html \
	multipage/begcomp-opcode.html \
	multipage/begemph-opcode.html \
	multipage/begemphphrase-opcode.html \
	multipage/begemphword-opcode.html \
	multipage/begmidword-opcode.html \
	multipage/begmode-opcode.html \
	multipage/begmodeword-opcode.html \
	multipage/begnum-opcode.html \
	multipage/begword-opcode.html \
	multipage/capsletter-opcode.html \
	multipage/capsmodechars-opcode.html \
	multipage/capsnocont-opcode.html \
	multipage/common-options.html \
	multipage/comp6-opcode.html \
	multipage/compbrl-opcode.html \
	multipage/context-opcode.html \
	multipage/contraction-opcode.html \
	multipage/correct-opcode.html \
	multipage/decpoint-opcode.html \
	multipage/digit-opcode.html \
	multipage/display-opcode.html \
	multipage/emphclass-opcode.html \
	multipage/emphletter-opcode.html \
	multipage/emphmodechars-opcode.html \
	multipage/endcaps-opcode.html \
	multipage/endcapsword-opcode.html \
	multipage/endcomp-opcode.html \
	multipage/endemph-opcode.html \
	multipage/endemphphrase-after-opcode.html \
	multipage/endemphphrase-before-opcode.html \
	multipage/endemphword-opcode.html \
	multipage/endmode-opcode.html \
	multipage/endmodeword-opcode.html \
	multipage/endnum-opcode.html \
	multipage/endword-opcode.html \
	multipage/exactdots-opcode.html \
	multipage/grouping-opcode.html \
	multipage/hyphen-opcode.html \
	multipage/include-opcode.html \
	multipage/index.html \
	multipage/joinnum-opcode.html \
	multipage/joinword-opcode.html \
	multipage/largesign-opcode.html \
	multipage/lenemphphrase-opcode.html \
	multipage/letsign-opcode.html \
	multipage/letter-opcode.html \
	multipage/litdigit-opcode.html \
	multipage/lou_005fallround.html \
	multipage/lou_005fbackTranslate.html \
	multipage/lou_005fbackTranslateString.html \
	multipage/lou_005fcharSize.html \
	multipage/lou_005fcharToDots.html \
	multipage/lou_005fcheckTable.html \
	multipage/lou_005fcheckhyphens.html \
	multipage/lou_005fchecktable-_0028program_0029.html \
	multipage/lou_005fcheckyaml.html \
	multipage/lou_005fcompileString.html \
	multipage/lou_005fdebug.html \
	multipage/lou_005fdotsToChar.html \
	multipage/lou_005ffindTable.html \
	multipage/lou_005ffree.html \
	multipage/lou_005fgetDataPath.html \
	multipage/lou_005fgetTable.html \
	multipage/lou_005fgetTypeformForEmphClass.html \
	multipage/lou_005fhyphenate.html \
	multipage/lou_005findexTables.html \
	multipage/lou_005flogEnd.html \
	multipage/lou_005flogFile.html \
	multipage/lou_005flogPrint.html \
	multipage/lou_005freadCharFromFile.html \
	multipage/lou_005fregisterLogCallback.html \
	multipage/lou_005fsetDataPath.html \
	multipage/lou_005fsetLogLevel.html \
	multipage/lou_005ftrace.html \
	multipage/lou_005ftranslate-_0028program_0029.html \
	multipage/lou_005ftranslate.html \
	multipage/lou_005ftranslateString.html \
	multipage/lou_005fversion.html \
	multipage/lowercase-opcode.html \
	multipage/lowword-opcode.html \
	multipage/match-opcode.html \
	multipage/math-opcode.html \
	multipage/midendnumericmodechars-opcode.html \
	multipage/midendword-opcode.html \
	multipage/midnum-opcode.html \
	multipage/midword-opcode.html \
	multipage/modeletter-opcode.html \
	multipage/multind-opcode.html \
	multipage/noback-opcode.html \
	multipage/nocont-opcode.html \
	multipage/nocontractsign-opcode.html \
	multipage/nocross-opcode.html \
	multipage/noemphchars-opcode.html \
	multipage/nofor-opcode.html \
	multipage/noletsign-opcode.html \
	multipage/noletsignafter-opcode.html \
	multipage/noletsignbefore-opcode.html \
	multipage/nonumsign-opcode.html \
	multipage/numericmodechars-opcode.html \
	multipage/numericnocontchars-opcode.html \
	multipage/numsign-opcode.html \
	multipage/partword-opcode.html \
	multipage/pattern-expression-syntax.html \
	multipage/postpunc-opcode.html \
	multipage/prepunc-opcode.html \
	multipage/prfword-opcode.html \
	multipage/punctuation-opcode.html \
	multipage/repeated-opcode.html \
	multipage/rependword-opcode.html \
	multipage/replace-opcode.html \
	multipage/repword-opcode.html \
	multipage/seqafterchars-opcode.html \
	multipage/seqafterpattern-opcode.html \
	multipage/seqbeforechars-opcode.html \
	multipage/seqdelimiter-opcode.html \
	multipage/sign-opcode.html \
	multipage/space-opcode.html \
	multipage/sufword-opcode.html \
	multipage/swapcc-opcode.html \
	multipage/swapcd-opcode.html \
	multipage/swapdd-opcode.html \
	multipage/syllable-opcode.html \
	multipage/translation_002dtables.html \
	multipage/typeform-parameter.html \
	multipage/undefined-opcode.html \
	multipage/uppercase-opcode.html \
	multipage/valid-attribute-characters.html \
	multipage/virtual-dots.html \
	multipage/word-opcode.html

CLEANFILES = liblouis.txt liblouis.html $(MULTI_HTML_DOCS)

EXTRA_DIST = \
	reset.css \
	gnu.css \
	liblouis.css \
	liblouis.txt \
	liblouis.html \
	$(MULTI_HTML_DOCS)

info_TEXINFOS = liblouis.texi

# generate one big html file
AM_MAKEINFOHTMLFLAGS = --no-headers --no-split --css-ref=liblouis.css

# generate multiple html pages
$(MULTI_HTML_DOCS): liblouis.texi
	rm -rf multipage && mkdir multipage
	$(MAKEINFO) --html $< -o multipage --css-ref=../liblouis.css
	perl -0777 -pe \
	     's~(MULTI_HTML_DOCS =).*?(CLEANFILES)~\1'"$$(printf ' \\\\\n\t%s' $$(find multipage -name '*.html' | sed 's~//~/~' | LC_ALL=C sort))"'\n\n\2~is' \
	     Makefile.am >Makefile.am.new
	if ! diff Makefile.am.new Makefile.am >/dev/null; then \
		mv Makefile.am.new Makefile.am; \
	else \
		rm Makefile.am.new; \
	fi

SUFFIXES                = .txt

.texi.txt:
	$(MAKEINFO) --plaintext $< -o $@
